// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs getBreadcrumbs() should result in two breadcrumbs, one for org and one for home 1`] = `
Array [
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        home
      </span>
    </div>,
    "path": "/",
  },
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        org
      </span>
    </div>,
    "path": "/someOrg",
  },
]
`;

exports[`Breadcrumbs getBreadcrumbs() should return a breadcrumb with home 1`] = `
Array [
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        home
      </span>
    </div>,
    "path": "/",
  },
]
`;

exports[`Breadcrumbs getBreadcrumbs() should three breadcrumbs, one for org and one for home, as well as a project 1`] = `
Array [
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        home
      </span>
    </div>,
    "path": "/",
  },
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        org
      </span>
    </div>,
    "path": "/someOrg",
  },
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        project
      </span>
    </div>,
    "path": "/someOrg/someProject",
  },
]
`;

exports[`Breadcrumbs getBreadcrumbs() should three breadcrumbs, one for org and one for home, as well as a project, even with a dangling slash 1`] = `
Array [
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        home
      </span>
    </div>,
    "path": "/",
  },
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        org
      </span>
    </div>,
    "path": "/someOrg",
  },
  Object {
    "component": <div
      className="breadcrumb-label"
    >
      <span>
        project
      </span>
    </div>,
    "path": "/someOrg/someProject",
  },
]
`;
